--- a/layanan.html
+++ b/layanan.html
@@ -20,7 +20,7 @@
     <main>
         <section class="ticket-form">
             <h2>Form Pengaduan</h2>
-            <form>
+            <form action="https://formspree.io/f/mkgbpevj" method="post">
                 <label for="name">Nama Lengkap</label>
                 <input type="text" id="name" name="name" placeholder="Masukkan nama lengkap" required />
 
