--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <section class="contact-info">
             <p>Hubungi kami melalui media sosial berikut:</p>
 <ul class="social-links">
-    <li><a href="https://github.com/kresnasurya" target="_blank" rel="noopener noreferrer">
+    <li><a href="https://github.com/kresnaash" target="_blank" rel="noopener noreferrer">
         <img src="https://cdn-icons-png.flaticon.com/24/25/25231.png" alt="GitHub" class="social-icon" /> GitHub
     </a></li>
     <li><a href="https://instagram.com/kresnaash" target="_blank" rel="noopener noreferrer">
